--- a/LearnToCode/Components/Pages/Account/Account.razor
+++ b/LearnToCode/Components/Pages/Account/Account.razor
@@ -185,7 +185,8 @@ else
                     @*
                         User Details
                     *@
-                    <div class="bg-white w-full shadow-md rounded-lg gap-4 p-8 justify-start items-start flex flex-col">
+                    <EditForm Model="@UserSettingsModel" FormName="User Details" OnValidSubmit="SubmitUserDetails" class="bg-white w-full shadow-md rounded-lg gap-4 p-8 justify-start items-start flex flex-col">
+                        <DataAnnotationsValidator/>
                         <div class="w-full">
                             <h4 class="font-semibold text-2xl w-full">
                                 User Details
@@ -194,68 +195,68 @@ else
                         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 w-full">
                             <div class="flex flex-col gap-2">
                                 <label for="firstName" class="text-gray-800 font-semibold text-md">First Name</label>
-                                <input type="text" id="firstName" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your first name" />
+                                <InputText @bind-Value="UserSettingsModel.FirstName" type="text" id="firstName" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your first name" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="lastName" class="text-gray-800 font-semibold text-md">Last Name</label>
-                                <input type="text" id="lastName" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your last name" />
+                                <InputText @bind-Value="UserSettingsModel.LastName" type="text" id="lastName" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your last name" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="country" class="text-gray-800 font-semibold text-md">Country</label>
-                                <input type="text" id="country" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your country" />
+                                <InputText @bind-Value="UserSettingsModel.Country" type="text" id="country" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your country" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="city" class="text-gray-800 font-semibold text-md">City</label>
-                                <input type="text" id="city" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your city" />
+                                <InputText @bind-Value="UserSettingsModel.City" id="city" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your city" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="address" class="text-gray-800 font-semibold text-md">Address</label>
-                                <input type="text" id="address" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your address" />
+                                <InputText @bind-Value="UserSettingsModel.Address" id="address" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your address" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="email" class="text-gray-800 font-semibold text-md">Email</label>
-                                <input type="email" id="email" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your email" />
+                                <InputText @bind-Value="UserSettingsModel.Email" id="email" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your email" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="phone" class="text-gray-800 font-semibold text-md">Phone Number</label>
-                                <input type="tel" id="phone" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your phone number" />
+                                <InputText @bind-Value="UserSettingsModel.PhoneNumber" type="tel" id="phone" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your phone number" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="birthday" class="text-gray-800 font-semibold text-md">Birthday</label>
-                                <input type="text" id="birthday" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your birthday" />
+                                <InputDate @bind-Value="UserSettingsModel.Birthday" id="birthday" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" />
                             </div>
 
                             <div class="flex flex-col gap-2">
-                                <label for="organization" class="text-gray-800 font-semibold text-md">Organization</label>
-                                <input type="text" id="organization" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your organization" />
+                                <label for="organisation" class="text-gray-800 font-semibold text-md">Organisation</label>
+                                <InputText @bind-Value="UserSettingsModel.Organisation" type="text" id="organisation" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your organisation" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="role" class="text-gray-800 font-semibold text-md">Role</label>
-                                <input type="text" id="role" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your role" />
+                                <InputText @bind-Value="UserSettingsModel.Role" type="text" id="role" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your role" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="department" class="text-gray-800 font-semibold text-md">Department</label>
-                                <input type="text" id="department" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your department" />
+                                <InputText @bind-Value="UserSettingsModel.Department" type="text" id="department" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your department" />
                             </div>
 
                             <div class="flex flex-col gap-2">
                                 <label for="zip" class="text-gray-800 font-semibold text-md">Zip/Postal Code</label>
-                                <input type="text" id="zip" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your zip/postal code" />
+                                <InputText @bind-Value="UserSettingsModel.PostalCode" type="text" id="zip" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full" placeholder="Enter your zip/postal code" />
                             </div>
                         </div>
-                        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">
+                        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">
                             Save Settings
                         </button>
-                    </div>
+                    </EditForm>
                     <div class="bg-white w-full shadow-md rounded-lg gap-4 p-8 justify-start items-start flex flex-col">
                         <div class="w-full">
                             <h4 class="font-semibold text-2xl w-full">
