Added more buttons to navmenu

--- a/LearnToCode/Components/Layout/NavMenu.razor
+++ b/LearnToCode/Components/Layout/NavMenu.razor
@@ -24,9 +24,11 @@
                 <Authorized>
                     <NavLink href="/dashboard" class="text-sm font-semibold leading-6 text-gray-900">Dashboard</NavLink>
                     <NavLink href="/Account" class="text-sm font-semibold leading-6 text-gray-900">Account</NavLink>
+                    <NavLink href="/Logout" class="text-sm font-semibold leading-6 text-gray-900">Logout</NavLink>
                 </Authorized>
                 <NotAuthorized>
                     <NavLink href="/login" class="text-sm font-semibold leading-6 text-gray-900">Log in <span aria-hidden="true">&rarr;</span></NavLink>
+                    <NavLink href="/signup" class="text-sm font-semibold leading-6 text-gray-900">Sign up <span aria-hidden="true">&rarr;</span></NavLink>
                 </NotAuthorized>
             </AuthorizeView>
         </div>
