--- a/LearnToCode/Components/Pages/Account/Login.razor
+++ b/LearnToCode/Components/Pages/Account/Login.razor
@@ -22,10 +22,8 @@
                             <label for="password" class="sr-only">Password</label>
                             <InputText @bind-Value="Model.Password" id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password"/>
                         </div>
-                        <div class="flex items-center justify-between">
-                            <div class="flex items-center">
-                            </div>
-                            <div class="text-sm">
+                        <div class="flex items-center justify-end w-full">
+                            <div class="text-sm w-full">
                                 <a href="/forgot-password" class="font-medium text-indigo-600 hover:text-indigo-500"> Forgot password? </a>
                             </div>
                         </div>
